--- a/roteiro01/pom.xml
+++ b/roteiro01/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>roteiro01</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>roteiro01</name>
-	<description>Roteiro 01 de laboratório de software</description>
+	<description>Roteiro 01 de laboratorio de software</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
