--- a/roteiro01/Dockerfile
+++ b/roteiro01/Dockerfile
@@ -1,5 +1,5 @@
 # Etapa de build
-FROM ubuntu:lastest AS build
+FROM ubuntu:latest AS build
 
 RUN apt-get update
 RUN apt-get install openjdk-21-jdk -y
