Implemtando front end funcional

--- a/roteiro01/src/main/resources/application.properties
+++ b/roteiro01/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
 
+spring.mvc.static-path-pattern=/**
+spring.web.resources.static-locations=classpath:/static/
